manifests/base/route.yaml
apiVersion: route.openshift.io/v1 
kind: Route 
metadata: 
  name: sentiment-api 
spec: 
  to: 
    kind: Service 
    name: sentiment-api 
  port: 
    targetPort: 8080 
  tls: 
    termination: edge
